Add mobile driver secc

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
         </nav>
     </header>
 
-
+    <!------------------------SECC REGISTER---------------------------------------->
     <main>
         <container class="register">
             <div class="main-title">
@@ -52,6 +52,7 @@
         </container>
     </main>
 
+    <!------------------------SECC ADVERTISING APP---------------------------------------->
     <section class="advertising">
         <div class="downloadInfo">
             <div class="appTextMobile">
@@ -70,6 +71,7 @@
         </div>
     </section>
 
+    <!------------------------SECC DRIVER---------------------------------------->
     <section class="driver">
         <div class="opacity">
             <div class="driverInfo">
@@ -80,21 +82,30 @@
         </div>
     </section>
 
+    <!------------------------SECC PRICES---------------------------------------->
     <section class="prices">
-        <container class="routes">
-            <form class="routesForm">
-                <h3>Tarifas</h3>
-                <img src="./assets/images/shape.png" /> <input type="text" placeholder="Ingrese su punto de partida">
-                <img src="./assets/images/shape2.png" /> <input type="text" placeholder="Ingrese su destino">
-                <button class="whiteBtn"> ¡TRAZAR RUTA!</button>
-            </form>
-        </container>
-
-        <container class="map">
-            <img src="" alt="map" />
-        </container>
+        <div class="routes">
+            <div class="pricesBox">
+                <form class="routesForm">
+                    <p class="subtitle">Tarifas</p>
+                    <p class="prf3">Consulta las tarifas LabCar aquí</p>
+                    <img src="./assets/images/shape.png" /> <input type="text"
+                        placeholder="Ingrese su punto de partida"><input type="text" class="inputWeb"
+                        placeholder="Insurgentes Centro, Cuahutémoc, Ciudad de México">
+                    <br>
+                    <img src="./assets/images/shape2.png" /> <input type="text" placeholder="Ingrese su destino"><input
+                        class="inputWeb" type="text" placeholder="Carolina, Ciuidad de los Deportes, Cuidad de México">
+                    <br>
+                    <button class="whiteBtn routesBtn"> ¡TRAZAR RUTA!</button>
+                </form>
+            </div>
+            <div class="mapPic">
+                <img src="./assets/images/mp.png" />
+            </div>
+        </div>
     </section>
 
+    <!------------------------FOOTER---------------------------------------->
     <footer>
         <img src="assets/images/logoBlanco.png" alt="white-logo" class="whiteLog" />
         <hr />
@@ -135,7 +146,7 @@
     </footer>
 
     <!-- -----------------------MODAL LOGIN---------------------------------------->
-
+    <!--
     <container class="modalContainer">
         <container class="login">
             <form class="loginForm">
@@ -146,9 +157,9 @@
             </form>
         </container>
     </container>
-
+    --->
     <!------------------------MODAL REGISTER---------------------------------------->
-
+    <!--
     <container class="modalContainer">
         <container class="register">
             <button class="blackBtn">Ya tienes una cuenta? </button>
@@ -167,9 +178,9 @@
             </form>
         </container>
     </container>
-
+    --->
     <!-- -----------------------MODAL FORM---------------------------------------->
-
+    <!--
     <container class="modalContainer">
         <container class="driverInfo">
             <form class="driverForm">
@@ -201,7 +212,7 @@
             </form>
         </container>
     </container>
-
+    --->
 </body>
 
 </html>
