Add footer style and nav routes

--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,8 @@
             <ul >
                 <!-- <span class="hamburger"><i class="fas fa-bars"></i></span> -->
                 <span id="btnCloseMenu">&times;</span>
-                <li> <a href="#"> Viaja </a> </li>
-                <li><a href="#">Conduce </a> </li>
+                <li> <a href="#pricesSecc"> Viaja </a> </li>
+                <li><a href="#driverSecc">Conduce </a></li>
                 <li><a href="#"> Inicia Sesión</a></li>   
             </ul>
         </nav>     
@@ -77,7 +77,7 @@
     </section>
 
     <!------------------------SECC DRIVER---------------------------------------->
-    <section class="driver">
+    <section id="driverSecc" class="driver">
         <div class="opacity">
             <div class="driverInfo">
                 <p class="subtitle">Conduce cuando quieras</p>
@@ -88,7 +88,7 @@
     </section>
 
     <!------------------------SECC PRICES---------------------------------------->
-    <section class="prices">
+    <section id="pricesSecc" class="prices">
         <div class="routes">
             <div class="pricesBox">
                 <form class="routesForm">
@@ -112,46 +112,48 @@
 
     <!------------------------FOOTER---------------------------------------->
     <footer>
-        <img src="assets/images/logoBlanco.png" alt="white-logo" class="whiteLog" />
-        <hr />
-        <container class="ulContainer">
-            <ul class="footerListContainer">
-                <li><a href="#" class="footerList"> Viaja </a></li>
-                <li><a href="#" class="footerList"> Conduce </a></li>
-                <li><a href="#" class="footerList"> Ciudades </a></li>
-                <li><a href="#" class="footerList"> Ciudades </a></li>
-                <li><a href="#" class="footerList"> Entregas </a></li>
-                <li><a href="#" class="footerList"> Cómo funciona? </a></li>
-                <li><a href="#" class="footerList"> Países </a></li>
-                <li><a href="#" class="footerList"> Seguridad </a></li>
-            </ul>
-            <ul class="footerListContainer-B">
-                <li><a href="#" class="footerList"> Oportunidades </a></li>
-                <li><a href="#" class="footerList"> Nuestra historia </a></li>
-                <li><a href="#" class="footerList"> API de LabCar </a></li>
-                <li><a href="#" class="footerList"> Eventos </a></li>
-                <li><a href="#" class="footerList"> Desarrolladores </a></li>
-                <li><a href="#" class="footerList"> Servicios </a></li>
-                <li><a href="#" class="footerList"> Laboratoria </a></li>
-                <li><a href="#" class="footerList"> Coders </a></li>
-            </ul>
+        <div class="infoFooter">
+            <img src="assets/images/logoBlanco.png" alt="white-logo" class="whiteLog" />
+            <hr />
+            <container class="ulContainer">
+                <ul class="footerListContainer">
+                    <li><a href="#" class="footerList"> Viaja </a></li>
+                    <li><a href="#" class="footerList"> Conduce </a></li>
+                    <li><a href="#" class="footerList"> Ciudades </a></li>
+                    <li><a href="#" class="footerList"> Ciudades </a></li>
+                    <li><a href="#" class="footerList"> Entregas </a></li>
+                    <li><a href="#" class="footerList"> Cómo funciona? </a></li>
+                    <li><a href="#" class="footerList"> Países </a></li>
+                    <li><a href="#" class="footerList"> Seguridad </a></li>
+                </ul>
+                <ul class="footerListContainer-B">
+                    <li><a href="#" class="footerList"> Oportunidades </a></li>
+                    <li><a href="#" class="footerList"> Nuestra historia </a></li>
+                    <li><a href="#" class="footerList"> API de LabCar </a></li>
+                    <li><a href="#" class="footerList"> Eventos </a></li>
+                    <li><a href="#" class="footerList"> Desarrolladores </a></li>
+                    <li><a href="#" class="footerList"> Servicios </a></li>
+                    <li><a href="#" class="footerList"> Laboratoria </a></li>
+                    <li><a href="#" class="footerList"> Coders </a></li>
+                </ul>
 
-
-
-            <div class="appRoutes">
-                <div class="socialIcons">
-                    <a href="http://www.facebook.com"> <i class="fab fa-facebook-f"></i></a>
-                    <a href="http://www.twitter.com"><i class="fab fa-twitter"></i></a>
-                    <a href="http://www.linkedin.com"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="http://www.apple.com"><i class="fab fa-apple"></i></a>
-                    <a href="https://play.google.com"><i class="fas fa-play"></i></a>
+                <div class="appRoutes">
+                    <div class="socialIcons">
+                        <a href="http://www.facebook.com"> <i class="fab fa-facebook-f"></i></a>
+                        <a href="http://www.twitter.com"><i class="fab fa-twitter"></i></a>
+                        <a href="http://www.linkedin.com"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="http://www.apple.com"><i class="fab fa-apple"></i></a>
+                        <a href="https://play.google.com"><i class="fas fa-play"></i></a>
+                    </div>
+                    <div class="installBtns">
+                        <img src="./assets/images/appstore.png" alt="appstore" class="appInstall" />
+                        <img src="./assets/images/enBadgeWebGeneric.png" alt="play" class="appInstall" />
+                    </div>
                 </div>
-                <img src="./assets/images/appstore.png" alt="appstore" class="appInstall" />
-                <img src="./assets/images/enBadgeWebGeneric.png" alt="play" class="appInstall" />
-            </div>
-        </container>
-        <hr />
-        <p class="copyRight">© 2017 LabCar technologies inc. </p>
+            </container>
+            <hr />
+            <p class="copyRight">© 2017 LabCar technologies inc. </p>
+        </div>
     </footer>
 
     <!-- -----------------------MODAL LOGIN---------------------------------------->
